[project]
name = "youtube-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.14.5",
    "crewai-tools>=1.14.5",
    "google-generativeai>=0.8.6",
    "langchain-community>=0.4.2",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "youtube-transcript-api>=1.2.4",
]
